# swagger_output.json
@@ -157,19 +157,29 @@
         }
       }
     },
-    "/api/notices/": {
+    "/api/notices/{id}": {
       "get": {
         "tags": [
           "Notices"
         ],
-        "summary": "어드민용 공지사항 조회",
-        "description": "어드민이 공지사항을 조회합니다.",
+        "summary": "어드민용 공지사항 디테일 조회",
+        "description": "어드민이 공지사항의 디테일을 조회합니다.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
           }
         }
-      },
+      }
+    },
+    "/api/notices/": {
       "post": {
         "tags": [
           "Notices"
@@ -195,31 +205,7 @@
             "description": ""
           }
         }
-      }
-    },
-    "/api/notices/{id}": {
-      "get": {
-        "tags": [
-          "Notices"
-        ],
-        "summary": "어드민용 공지사항 디테일 조회",
-        "description": "어드민이 공지사항의 디테일을 조회합니다.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/notices/role": {
+      },
       "get": {
         "tags": [
           "Notices"
